--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -18,3 +18,29 @@ spring.jpa.properties.hibernate.format_sql=true
 # create-drop -> creates on start, drops on shutdown
 # validate    -> validates schema
 spring.jpa.hibernate.ddl-auto=update
+
+# Zipkin Configuration
+zipkin.base-url=http://localhost:9411
+zipkin.enabled=true
+
+# Sleuth Configuration
+sleuth.sampler.probability=1.0
+sleuth.propagation-keys=b3,X-B3-TraceId,X-B3-SpanId,X-B3-ParentSpanId,X-B3-Sampled,X-B3-Flags
+
+# Server Configuration
+server.port=8082
+
+# Eureka Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Feign Configuration
+feign.hystrix.enabled=true
+
+# Management / Tracing Configuration
+management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=*
+
+# Logging Pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %5p [${spring.application.name},%X{traceId},%X{spanId}] %logger{36} - %msg%n
