--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -18,6 +18,12 @@ spring.jpa.properties.hibernate.format_sql=true
 # create-drop -> creates on start, drops on shutdown
 # validate    -> validates schema
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 # Zipkin Configuration
 zipkin.base-url=http://localhost:9411
