Refactor order-service-dev.properties for clarity
Removed unused configuration properties and added new tracing settings.

--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -1,52 +1,48 @@
+# ==============================
+# Database Configuration
+# ==============================
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
 # ==============================
 # JPA / Hibernate Settings
 # ==============================
-# Show SQL queries in console
-spring.jpa.show-sql=true
-
-# Format SQL for readability
-spring.jpa.properties.hibernate.format_sql=true
-
-# Hibernate DDL strategy
-# create      -> creates tables every run
-# update      -> updates schema without dropping data
-# create-drop -> creates on start, drops on shutdown
-# validate    -> validates schema
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+# Hibernate SQL logging via logger (so traceId will appear)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
-# Zipkin Configuration
-zipkin.base-url=http://localhost:9411
-zipkin.enabled=true
+# ==============================
+# Tracing (Spring Boot 3 Style)
+# ==============================
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
-# Sleuth Configuration
-sleuth.sampler.probability=1.0
-sleuth.propagation-keys=b3,X-B3-TraceId,X-B3-SpanId,X-B3-ParentSpanId,X-B3-Sampled,X-B3-Flags
+management.endpoints.web.exposure.include=*
 
-# Server Configuration
+
+# ==============================
+# Server
+# ==============================
 server.port=8082
 
-# Eureka Configuration
+
+# ==============================
+# Eureka
+# ==============================
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Feign Configuration
-feign.hystrix.enabled=true
 
-# Management / Tracing Configuration
-management.tracing.sampling.probability=1.0
-management.endpoints.web.exposure.include=*
-
-# Logging Pattern
+# ==============================
+# Logging Pattern (TraceId + SpanId)
+# ==============================
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %5p [${spring.application.name},%X{traceId},%X{spanId}] %logger{36} - %msg%n
