Disable SQL query logging in development config

--- a/config/payment-service-dev.properties
+++ b/config/payment-service-dev.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate Settings
 # ==============================
 # Show SQL queries in console
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # Format SQL for readability
 spring.jpa.properties.hibernate.format_sql=true
