--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -15,31 +15,31 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Hibernate SQL logging via logger (so traceId will appear)
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 # ==============================
 # Tracing (Spring Boot 3 Style)
 # ==============================
-#management.tracing.sampling.probability=1.0
-#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
-#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=*
 
 
 # ==============================
 # Server
 # ==============================
-#server.port=8082
+server.port=8082
 
 
 # ==============================
 # Eureka
 # ==============================
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 
 # ==============================
