Update payment-service-dev.properties for logging and tracing
Enabled SQL query logging and added configurations for Zipkin, Sleuth, Eureka, and Actuator endpoints.

--- a/config/payment-service-dev.properties
+++ b/config/payment-service-dev.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate Settings
 # ==============================
 # Show SQL queries in console
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 # Format SQL for readability
 spring.jpa.properties.hibernate.format_sql=true
@@ -18,3 +18,27 @@ spring.jpa.properties.hibernate.format_sql=true
 # create-drop -> creates on start, drops on shutdown
 # validate    -> validates schema
 spring.jpa.hibernate.ddl-auto=update
+
+# Zipkin
+zipkin.base-url=http://localhost:9411
+zipkin.enabled=true
+
+# Sleuth
+sleuth.sampler.probability=1.0
+
+# Server
+server.port=8081
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Management / Tracing
+management.tracing.sampling.probability=1.0
+
+# Actuator Endpoints
+management.endpoints.web.exposure.include=*
+
+# Logging Pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %5p [${spring.application.name},%X{traceId},%X{spanId}] %logger{36} - %msg%n
